TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "128044840937616" [label="Start"];
  "128044840937616" -> "128044840942896";
  "128044840942896" [label="Code"];
  "128044840942896" -> "128044840943040";
  "128044840943040" [label="Function"];
  "128044840943040" -> "128044840940592";
  "128044840943040" -> "128044840939872";
  "128044840943040" -> "128044840940544";
  "128044840940592" [label="main IDENTIFIER"];
  "128044840939872" [label="Parameters"];
  "128044840940544" [label="Code"];
  "128044840940544" -> "128044840938912";
  "128044840940544" -> "128044840940976";
  "128044840940544" -> "128044840939536";
  "128044840938912" [label="Code"];
  "128044840938912" -> "128044840941024";
  "128044840941024" [label="Declaration"];
  "128044840941024" -> "128044840934688";
  "128044840941024" -> "128044840939728";
  "128044840934688" [label="x IDENTIFIER"];
  "128044840939728" [label="1 INT"];
  "128044840940976" [label="Code"];
  "128044840940976" -> "128044840939344";
  "128044840939344" [label="Declaration"];
  "128044840939344" -> "128044840936176";
  "128044840939344" -> "128044840930032";
  "128044840936176" [label="x IDENTIFIER"];
  "128044840930032" [label="2 INT"];
  "128044840939536" [label="Return"];
  "128044840939536" -> "128044840938096";
  "128044840939536" -> "128044840938000";
  "128044840938096" [label="return T__34"];
  "128044840938000" [label="0 INT"];
}
